--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
             <label for="" class="form-label">
                 Username
             </label>
-            <input type="text" class="form-control" placeholder="Username">
+            <input type="text" class="form-control" [ngModel] = "username" placeholder="Username">
         </div>
         <div class="form-group">
             <label for="" class="form-label">Password</label>
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
             <br>
-            <button class="btn btn-warning">
+            <button class="btn btn-warning" (click)="checkLogin()">
             Login
             </button>
             <button class="btn btn-secondary">Cancel</button>
